--- a/package.json
+++ b/package.json
@@ -4,9 +4,45 @@
     "prod": "gulp --production",
     "dev": "gulp watch"
   },
+  "dependencies": {
+    "express": "4.14.0",
+    "ioredis": "2.2.0",
+    "semantic-ui-less": "^2.2.1",
+    "socket.io": "1.4.8",
+    "socket.io-client": "1.4.8"
+  },
   "devDependencies": {
+    "babel-core": "^6.11.4",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-runtime": "^6.12.0",
+    "babel-preset-es2015-webpack": "^6.4.2",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-runtime": "^6.11.6",
+    "buble": "^0.12.5",
+    "buble-loader": "^0.2.2",
+    "css-loader": "^0.23.1",
+    "style-loader": "^0.13.1",
+    "vue-hot-reload-api": "^1.3.3",
+    "vue-html-loader": "^1.2.3",
+    "vue-loader": "^8.5.3",
+    "vue-style-loader": "^1.0.0",
+    "webpack": "^1.13.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-3": "^6.5.0",
     "gulp": "^3.9.1",
-    "laravel-elixir": "^5.0.0",
-    "bootstrap-sass": "^3.3.0"
+    "laravel-elixir": "^6.0.0-9",
+    "laravel-elixir-vue": "^0.1.4",
+    "laravel-elixir-webpack-official": "^1.0.2",
+    "jquery": "^3.1.0",
+    "dropzone": "4.3.0",
+    "js-cookie": "^2.1.2",
+    "magnific-popup": "^1.1.0",
+    "underscore": "1.8.3",
+    "vue": "^1.0.26",
+    "moment": "^2.14.1",
+    "animate.css": "3.5.1",
+    "vue-resource": "^0.9.3",
+    "sweetalert2": "^4.0.15"
   }
 }
